/*
 * $Id: ChangeLog,v 1.3895 2005/03/02 02:11:45 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-03-01 20:50 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * include/simplex.c
    + Added iLastLen to maintain length of last read buffer when not sToken.
    * Simplified rewind logic and sWord2Check logic in SimpLex_CheckWords() using new iLastLen
  * source/compiler/hbslex.c
    * Touched.

2005-03-02 09:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * makefile.bc
  * make_b32.bat
    ! simplification of macros and branchings

2005-03-02 04:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * makefile.gc
  * hrbdll.gc
    - remove HB_MATH_ERRNO flags

  * source/rtl/tget.prg
    * work around of untransform method for get picture with "@R"

2005-03-01 17:25 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/math.c
     ! on OS/2 there is not isinf() but isfinite().

2005-02-28 21:27 UTC+0200 Mindaugas Kavaliauskas <dbtopas @at@ dbtopas.lt>
  + config/w32/dm.cf
  + config/w32/pellesc.cf
    + GNU make support for Digital Mars and Pelles C compilers

2005-02-28 11:27 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * include/simplex.c
    * Added 1 missing reset of sSelf[0].

2005-02-28 19:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/pplib.c
  * contrib/libnf/color2n.c
  * utils/hbpp/hbpp.c
    * single-liners to conform with xHarbour coding style

2005-02-28 17:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/delim1.c
  * source/rdd/sdf1.c
  * source/rdd/dbfdbt/dbfdbt1.c
  * source/rdd/dbffpt/dbffpt1.c
  * contrib/rdd_ads/ads1.c
  * source/lang/msgbgwin.c
  * source/lang/msgby866.c
  * source/lang/msgbywin.c
  * source/lang/msgca.c
  * source/lang/msgcs852.c
  * source/lang/msgcsiso.c
  * source/lang/msgcskam.c
  * source/lang/msgcswin.c
  * source/lang/msgde.c