@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3895 2005/03/02 02:11:45 andijahja Exp $
+ * $Id: ChangeLog,v 1.3896 2005/03/02 05:01:29 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-03-01 21:53 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
+  * source\vm\classes.c
+    - Commented out handling of EVENT Message fo Codeblocks.
+
+  /*
+    Eval as message is handles at the VM level.
+    This fix allows claases to implement an Eval Method.
+   */
 
 2005-03-01 20:50 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
   * include/simplex.c
